fixing css background color issue on mobile web

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -17,6 +17,7 @@ button {
   -moz-appearance: none;
   /* appearance: none; */
   outline: none;
+  background-color: #ccc;
 }
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
